--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .DS_Store
 .AppleDouble
 .LSOverride
+Pods
 
 # Icon must end with two \r
 Icon
@@ -51,7 +52,7 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
-
+*/xcuserdata/
 ## Other
 *.moved-aside
 *.xccheckout
